--- a/Kafala.Web.UI/Configuration/appSettings.config
+++ b/Kafala.Web.UI/Configuration/appSettings.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0"?>
 <appSettings>
- 
+  <add key="Foundation_Email_FromAddress" value="aali_hassan@hotmail.com" />
   <add key="PageSize" value="10"/>
   <add key="CacheExpirationInSeconds" value="1800"/>
-    <add key="webpages:Version" value="2.0.0.0" />
+  <add key="webpages:Version" value="2.0.0.0" />
   <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+  <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 </appSettings>
