--- a/Kafala.Query/Kafala.Query.csproj
+++ b/Kafala.Query/Kafala.Query.csproj
@@ -63,10 +63,12 @@
     <Compile Include="DonationCase\ViewDonationCaseViewModelPopulator.cs" />
     <Compile Include="DonationCase\CreateDonationCaseViewModelPopulator.cs" />
     <Compile Include="DonationCase\ListDonationCaseViewModelPopulator.cs" />
+    <Compile Include="Donor\ReportingHelper.cs" />
     <Compile Include="PaymentPeriod\PaymentPeriodCreateModelPopulator.cs" />
     <Compile Include="PaymentPeriod\ListPaymentPeriodViewModelPopulator.cs" />
     <Compile Include="PaymentPeriod\PaymentPeriodViewModelPopulator.cs" />
     <Compile Include="PaymentPeriod\UpdatePaymentPeriodViewModelPopulator.cs" />
+    <Compile Include="Reports\PaymentStatusReportViewModelPopulator.cs" />
     <Compile Include="Payment\PaymentCreateModelPopulator.cs" />
     <Compile Include="Payment\PaymentListModelPopulator.cs" />
     <Compile Include="Payment\PaymentViewModelPopulator.cs" />
