--- a/Kafala.Web.UI/Views/Web.config
+++ b/Kafala.Web.UI/Views/Web.config
@@ -19,6 +19,7 @@
         <add namespace="VortexSoft.Bootstrap" />
         <add namespace="Foundation.FormBuilder" />
         <add namespace="Foundation.Web.Extensions" />
+        <add namespace="BootstrapNamedColor = Foundation.Web.BootstrapNamedColor" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
