--- a/Kafala.Entities/Kafala.Entities.csproj
+++ b/Kafala.Entities/Kafala.Entities.csproj
@@ -60,6 +60,7 @@
     <Compile Include="DonationCase.cs" />
     <Compile Include="Donor.cs" />
     <Compile Include="PaymentPeriod.cs" />
+    <Compile Include="PaymentStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DoNotMap\TypeHolder.cs" />
     <Compile Include="User.cs" />
