--- a/Kafala.Web.UI/Kafala.Web.UI.csproj
+++ b/Kafala.Web.UI/Kafala.Web.UI.csproj
@@ -201,7 +201,9 @@
     <Content Include="Scripts\Debug\ThirdParty\MicrosoftMvcAjax.debug.js" />
     <Content Include="Scripts\Debug\ThirdParty\MicrosoftMvcValidation.js" />
     <Content Include="Scripts\Debug\ThirdParty\MicrosoftMvcValidation.debug.js" />
-    <Content Include="Views\Web.config" />
+    <Content Include="Views\Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
