--- a/Kafala.Web.UI/Views/Web.config
+++ b/Kafala.Web.UI/Views/Web.config
@@ -18,6 +18,7 @@
         <add namespace="Foundation.Web" />
         <add namespace="VortexSoft.Bootstrap" />
         <add namespace="Foundation.FormBuilder" />
+        <add namespace="Foundation.FormBuilder.Extensions" />
         <add namespace="Foundation.Web.Extensions" />
         <add namespace="BootstrapNamedColor = Foundation.Web.BootstrapNamedColor" />
       </namespaces>
