--- a/Foundation.Infrastructure/Foundation.Infrastructure.csproj
+++ b/Foundation.Infrastructure/Foundation.Infrastructure.csproj
@@ -83,7 +83,9 @@
     <Compile Include="Query\IQueryContainer.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
