--- a/Kafala.Test/packages.config
+++ b/Kafala.Test/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AspNetMvc" version="4.0.20710.0" targetFramework="net45" />
+  <package id="AutoMapper" version="3.1.0" targetFramework="net45" />
   <package id="Faker.Net" version="1.0.3" targetFramework="net45" />
   <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
