--- a/Kafala.BusinessManagers/packages.config
+++ b/Kafala.BusinessManagers/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="3.1.0" targetFramework="net45" />
+  <package id="Castle.Core" version="3.2.2" targetFramework="net45" />
   <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net40" />
   <package id="NHibernate" version="3.3.3.4000" targetFramework="net40" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
