--- a/Kafala.Query/Kafala.Query.csproj
+++ b/Kafala.Query/Kafala.Query.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Donor\DonorViewModelPopulator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\AuthenticationService.cs" />
+    <Compile Include="Security\ICurrentAuthenticateUser.cs" />
     <Compile Include="Security\UserToken.cs" />
     <Compile Include="Shared\MenuPopulator.cs" />
   </ItemGroup>
