--- a/Foundation.FormBuilder/Foundation.FormBuilder.csproj
+++ b/Foundation.FormBuilder/Foundation.FormBuilder.csproj
@@ -67,6 +67,7 @@
   <ItemGroup>
     <Compile Include="Blocks\ControlContainer.cs" />
     <Compile Include="Blocks\ControlGroup.cs" />
+    <Compile Include="Blocks\FormContainer.cs" />
     <Compile Include="Blocks\ElementGroup.cs" />
     <Compile Include="CustomAttribute\Contents.cs" />
     <Compile Include="CustomAttribute\FilterControl.cs" />
@@ -82,10 +83,12 @@
     <Compile Include="DynamicForm\BootstrapFormType.cs" />
     <Compile Include="CustomAttribute\FormElement.cs" />
     <Compile Include="DynamicForm\IDynamicUiBuilder.cs" />
-    <Compile Include="DynamicForm\NavHtmlTextWritter.cs" />
+    <Compile Include="Extensions\NavHtmlTextWritter.cs" />
+    <Compile Include="Extensions\RouteValueDictionaryExtensions.cs" />
     <Compile Include="Extensions\HtmlHelperExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Extensions\TagBuilderExtensions.cs" />
+    <Compile Include="Form\Bootstrap.cs" />
     <Compile Include="HtmlAttributes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validation\ValidationAttribute.cs" />
@@ -93,6 +96,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
