--- a/VortexSoft.Bootstrap/VortexSoft.Bootstrap.csproj
+++ b/VortexSoft.Bootstrap/VortexSoft.Bootstrap.csproj
@@ -158,7 +158,9 @@
     <Content Include="ToDo.txt" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Scripts\jquery-2.0.3.min.map" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
