--- a/VortexSoft.Bootstrap/packages.config
+++ b/VortexSoft.Bootstrap/packages.config
@@ -1,10 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
+  <package id="AspNetMvc" version="4.0.20710.0" targetFramework="net45" />
+  <package id="AutoMapper" version="3.1.0" targetFramework="net45" />
   <package id="jQuery" version="2.0.3" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.10.3" targetFramework="net40" />
-  <package id="jQueryUIHelpers.Mvc4" version="2.1.0" targetFramework="net40" />
+  <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
+  <package id="jQuery.vsdoc" version="1.6" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net45" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
+  <package id="Modernizr" version="2.6.2" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
+  <package id="structuremap" version="2.6.4.1" targetFramework="net40" />
+  <package id="Twitter.Bootstrap" version="3.0.0" targetFramework="net40" />
+  <package id="WebActivatorEx" version="2.0.3" targetFramework="net40" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
