updates to paging

--- a/Kafala.Entities/Kafala.Entities.csproj
+++ b/Kafala.Entities/Kafala.Entities.csproj
@@ -44,9 +44,8 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Foundation.Persistence.0.8\lib\net45\Foundation.Persistence.dll</HintPath>
     </Reference>
-    <Reference Include="Foundation.Web, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Foundation.Web.0.8\lib\net45\Foundation.Web.dll</HintPath>
+    <Reference Include="Foundation.Web">
+      <HintPath>..\packages\Foundation.Web.0.9\lib\net45\Foundation.Web.dll</HintPath>
     </Reference>
     <Reference Include="Iesi.Collections, Version=1.0.1.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -88,7 +87,6 @@
     </Reference>
     <Reference Include="System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.30506.0\lib\net40\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
