--- a/Foundation.Infrastructure/Foundation.Infrastructure.csproj
+++ b/Foundation.Infrastructure/Foundation.Infrastructure.csproj
@@ -59,7 +59,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BL\TransactionInterceptor.cs" />
-    <Compile Include="BusinessManagerRegistery.cs" />
     <Compile Include="BL\BusinessManagerContainer.cs" />
     <Compile Include="BL\BusinessManagerInterceptor.cs" />
     <Compile Include="BL\BusinessManagerRegisterationConventrion.cs" />
@@ -67,14 +66,17 @@
     <Compile Include="BL\IBusinessManagerContainer.cs" />
     <Compile Include="BL\IBusinessManagerRegistery.cs" />
     <Compile Include="BL\IBusinessManagerInvocationLogger.cs" />
-    <Compile Include="Extensions\StructureMapExtension.cs" />
-    <Compile Include="IFoundationConfigurator.cs" />
+    <Compile Include="Configurations\BusinessManagerRegistery.cs" />
+    <Compile Include="Configurations\EmailRegistery.cs" />
+    <Compile Include="Configurations\InfrastructureConfigurator.cs" />
+    <Compile Include="Configurations\QueryRegistery.cs" />
+    <Compile Include="Configurations\SecurityRegistery.cs" />
     <Compile Include="Notifications\EmailLogger.cs" />
     <Compile Include="Notifications\EmailService.cs" />
     <Compile Include="Notifications\IEmailLogger.cs" />
     <Compile Include="Notifications\IEmailService.cs" />
+    <Compile Include="Notifications\IFlashMessenger.cs" />
     <Compile Include="Notifications\NotificationHelper.cs" />
-    <Compile Include="QueryRegistery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\QueryRegisterationConventrion.cs" />
     <Compile Include="Query\QueryContainer.cs" />
@@ -83,13 +85,21 @@
     <Compile Include="Query\IQueryRegistery.cs" />
     <Compile Include="Query\IQuery.cs" />
     <Compile Include="Query\IQueryContainer.cs" />
+    <Compile Include="Security\IPasswordHelper.cs" />
+    <Compile Include="Security\PasswordHelper.cs" />
+    <Compile Include="Security\PasswordInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Foundation.Configuration\Foundation.Configuration.csproj">
+      <Project>{975ed9e8-b905-4aa3-83c3-8d6d193c785c}</Project>
+      <Name>Foundation.Configuration</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
