--- a/Foundation.Persistence/Foundation.Persistence.csproj
+++ b/Foundation.Persistence/Foundation.Persistence.csproj
@@ -52,6 +52,8 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configurations\PersistenceConfigurator.cs" />
+    <Compile Include="Configurations\PersistenceRegistery.cs" />
     <Compile Include="ConnectionString.cs" />
     <Compile Include="IConnectionString.cs" />
     <Compile Include="ISessionFactoryProvider.cs" />
@@ -62,7 +64,6 @@
     <Compile Include="INHibernateMappingConfigurationFactory.cs" />
     <Compile Include="ISessionFactoryFactory.cs" />
     <Compile Include="NhibernateConfigurationFactory.cs" />
-    <Compile Include="PersistenceRegistery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SessionFactoryFactory.cs" />
     <Compile Include="SessionFactoryProvider.cs" />
@@ -72,6 +73,12 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Foundation.Configuration\Foundation.Configuration.csproj">
+      <Project>{975ed9e8-b905-4aa3-83c3-8d6d193c785c}</Project>
+      <Name>Foundation.Configuration</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
