--- a/Foundation.Configuration/Foundation.Configuration.csproj
+++ b/Foundation.Configuration/Foundation.Configuration.csproj
@@ -44,6 +44,7 @@
     <Compile Include="FoundationConfigurator.cs" />
     <Compile Include="IFoundationConfigurator.cs" />
     <Compile Include="IResourcesLocator.cs" />
+    <Compile Include="PagingConfigurations.cs" />
     <Compile Include="PersistenceConfigurations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebConfigurations.cs" />
