--- a/Kafala.BusinessManagers/packages.config
+++ b/Kafala.BusinessManagers/packages.config
@@ -3,6 +3,8 @@
   <package id="AspNetMvc" version="4.0.20710.0" targetFramework="net45" />
   <package id="AutoMapper" version="3.1.0" targetFramework="net45" />
   <package id="Castle.Core" version="3.2.2" targetFramework="net45" />
+  <package id="DataAnnotationsExtensions" version="1.1.0.0" targetFramework="net45" />
+  <package id="DataAnnotationsExtensions.MVC3" version="1.1.0.0" targetFramework="net45" />
   <package id="FluentNHibernate" version="1.4.0.0" targetFramework="net45" />
   <package id="Foundation.Infrastructure" version="0.9" targetFramework="net45" />
   <package id="Foundation.Persistence" version="0.9" targetFramework="net45" />
@@ -16,4 +18,5 @@
   <package id="NHibernate" version="3.3.3.4000" targetFramework="net40" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
   <package id="structuremap" version="2.6.4.1" targetFramework="net45" />
+  <package id="WebActivator" version="1.2.0.0" targetFramework="net45" />
 </packages>
