--- a/Kafala.Web.UI/packages.config
+++ b/Kafala.Web.UI/packages.config
@@ -4,6 +4,7 @@
   <package id="AspNetMvc" version="4.0.20710.0" targetFramework="net45" />
   <package id="AutoMapper" version="3.1.0" targetFramework="net45" />
   <package id="Castle.Core" version="3.2.2" targetFramework="net45" />
+  <package id="DataAnnotationsExtensions" version="1.1.0.0" targetFramework="net45" />
   <package id="FluentNHibernate" version="1.4.0.0" targetFramework="net45" />
   <package id="Foundation.FormBuilder" version="0.9" targetFramework="net45" />
   <package id="Foundation.Infrastructure" version="0.9" targetFramework="net45" />
@@ -25,6 +26,7 @@
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net45" />
   <package id="structuremap" version="2.6.4.1" targetFramework="net40" />
   <package id="Twitter.Bootstrap" version="3.0.0" targetFramework="net40" />
+  <package id="WebActivator" version="1.2.0.0" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.3" targetFramework="net40" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
