--- a/Foundation.Web/Foundation.Web.csproj
+++ b/Foundation.Web/Foundation.Web.csproj
@@ -92,12 +92,12 @@
     <Compile Include="Navigation\MenuItem.cs" />
     <Compile Include="Paging\INavigationParameters.cs" />
     <Compile Include="Paging\IPagedList.cs" />
-    <Compile Include="Paging\IPagingInfo.cs" />
+    <Compile Include="Paging\IPagingResults.cs" />
     <Compile Include="Paging\IPagingParameters.cs" />
     <Compile Include="Paging\ISortingParameters.cs" />
     <Compile Include="Paging\PagedList.cs" />
     <Compile Include="Paging\PagingExtensions.cs" />
-    <Compile Include="Paging\PagingInfo.cs" />
+    <Compile Include="Paging\PagingResults.cs" />
     <Compile Include="Paging\QueryPager.cs" />
     <Compile Include="Paging\RendersPagedView.cs" />
     <Compile Include="Paging\PagedViewModel.cs" />
@@ -112,6 +112,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
